ChangeLog for KNotes
====================

2002/09/30  Michael Brade <brade@kde.org>

    * fixed mouse behaviour to be like kwin: 
         - raise() and lower() windows already on mouse button press, 
           not on mouse button release
         - MMB moves notes as well
    * reduced code duplication (setColor, updateFocus)
    * fixed some consts

2002/09/28  Michael Brade <brade@kde.org>

    * finally fixed the session management bug (remove the sessionId from
      all notes => KWin will ignore them)

2002/09/26  Michael Brade <brade@kde.org>

    * new version number

2002/09/24  Michael Brade <brade@kde.org>

    * fixed printing:
        - do not use private Qt headers
        - use the correct font 

2002/09/21  Michael Brade <brade@kde.org>

    * fixed drag and drop of text and URLs
    * fixed changing of font size/family/style

2002/09/10  Michael Brade <brade@kde.org>

    * fixed one more readNumEntry, thanks to Matthias Kiefer 
 
2002/06/17  Wynn Wilkes <wynnw@wilkes.ws>

    * fixed a bug where new notes with the version of 2.2 were seen as old notes
      and were converted which led to bad note config files and a big black screen

    * fixed the note conversion code to use KNOTES_VERSION

2002/05/10  Michael Brade <brade@kde.org>

    * fixed crash on exit due to wrong deletion order
    * fixed #42437: preferences never got saved (whoops!!)

2002/03/08  Michael Brade <brade@kde.org>

    * fixed #38958: Show note color in notes menu

2002/01/23  Michael Brade <brade@kde.org>

    * fixed #36376, #36799: MMB for new note

2002/01/22  Michael Brade <brade@kde.org>

    * fixed #37222: Alt-F4 "deletes" note
    * fixed #37176: ask for confirmation before deleting a note
    * fixed #36374: double click to rename a note
    * email updates

2001/09/09  Michael Brade <brade@informatik.uni-muenchen.de>

    * improved the config dialog
    * almost finished rich text notes

2001/09/08  Michael Brade <brade@informatik.uni-muenchen.de>
